@@ -6,10 +6,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.validation.BindingResult;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import ru.project.NewsWebsite.dto.AuthenticationDTO;
 import ru.project.NewsWebsite.dto.PersonDTO;
 import ru.project.NewsWebsite.models.Person;
@@ -20,6 +17,7 @@ import ru.project.NewsWebsite.services.TagService;
 import ru.project.NewsWebsite.util.PersonValidator;
 
 import javax.validation.Valid;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -31,9 +29,7 @@ public class AuthController {
     private final PersonValidator personValidator;
     private final JWTUtil jwtUtil;
     private final ModelMapper modelMapper;
-
     private final AuthenticationManager authenticationManager;
-
     private final TagService tagService;
 
     @Autowired
@@ -56,14 +52,14 @@ public class AuthController {
         personValidator.validate(person, bindingResult);
 
         if (bindingResult.hasErrors()) {
-            return Map.of("message", "Registration error");
+            return Collections.singletonMap("message", "Registration error");
         }
 
         registrationService.register(person);
 
         String token = jwtUtil.generateToken(person.getEmail());
 
-        return Map.of("jwt-token", token);
+        return Collections.singletonMap("jwt-token", token);
     }
 
     //  Аутентификация пользователя
@@ -80,7 +76,7 @@ public class AuthController {
         }
 
         String token = jwtUtil.generateToken(authenticationDTO.getUsername());
-        return Map.of("jwt-token", token);
+        return Collections.singletonMap("jwt-token", token);
     }
 
     //    Преобразование PersonDTO -> Person
